feat : write the comment to easy code
"주석 처리를 했습니다. 보고 추가해 주세요."

--- a/hbase/Dockerfile
+++ b/hbase/Dockerfile
@@ -1,11 +1,14 @@
 FROM base
 
+# Hbase 버전 및 설치 파일
 ENV HBASE_VERSION=2.5.4
 ENV HBASE_URL=http://apache.mirror.cdnetworks.com/hbase/${HBASE_VERSION}/hbase-${HBASE_VERSION}-bin.tar.gz
 
+# Hbase 다운로드 및 압축 해제
 RUN wget ${HBASE_URL}
 RUN tar -xvzf hbase-${HBASE_VERSION}-bin.tar.gz && rm -rf hbase-${HBASE_VERSION}-bin.tar.gz
 
+# Hbase 디렉토리 /opt  이동 및 환경 변수 설정
 RUN mv hbase-${HBASE_VERSION} /opt
 ENV HBASE_HOME=/opt/hbase-${HBASE_VERSION}
 ENV HBASE_CONF_DIR=${HBASE_HOME}/conf
@@ -15,7 +18,10 @@ ADD hbase-site.xml ${HBASE_CONF_DIR}
 ADD regionservers ${HBASE_CONF_DIR}
 ADD backup-masters ${HBASE_CONF_DIR}
 
+# Hbase 환경 설정 파일 env.sh 에 java_home 경로 추가 
 RUN echo 'export JAVA_HOME=/usr/lib/jvm/java-1.8-openjdk' >> ${HBASE_CONF_DIR}/hbase-env.sh
+
+# ssh 호스트 키 확인 비활성화
 RUN echo 'StrictHostKeyChecking no' >> /etc/ssh/ssh_config
 
 ADD hmaster.sh /hmaster.sh
