fix: change Dockerfile for airflow, airflow.cfg, .gitignore, test.ipynb, delete stopwords-ko.txt

--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,4 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/jupyternotebooks,python,java
 
 airflow/source
+stopwords-ko.txt
